tests/snapshots/parser_tests__err_invalid_modifier_member.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:2:5

     2 │
       │ async process() {
       │ ^^^
       │

  ⓘ Modifier 'async' cannot be applied to class members
────────────────────────────────────────────────────────────
